Navbar now jumps to correct spot when clicked

--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -21,7 +21,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 40px;
+  padding-top: 80px;
   padding-bottom: 40px;
 }
 
