--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -37,7 +37,7 @@ textarea {
   justify-content: center;
   align-items: center;
   color: white;
-  padding-top: 40px;
+  padding-top: 80px;
   padding-bottom: 40px;
 }
 
