--- a/src/components/portfolio/portfolio.module.scss
+++ b/src/components/portfolio/portfolio.module.scss
@@ -8,7 +8,7 @@
 }
 
 .title {
-  padding: 40px 0px 40px 0px;
+  padding: 80px 0px 40px 0px;
   display: flex;
   flex: 1;
   justify-content: center;
